SdmForm(): text form element now displays value in text field, it was not showing value even if it was set. Added method setDefaultValues() which sets any value matching certain criteria as a default value for use with form elements select, radio, and checkbox; Navigation Manager: Removed unnecessary form element values. Corrected form elements in addmenustage1.php and addmenustage1.php. editmenustage2 is working, ready for development of editmenustage3.

--- a/themes/sdmDemoTheme1/sdm_layout.css
+++ b/themes/sdmDemoTheme1/sdm_layout.css
@@ -35,14 +35,10 @@ body {
 
 /** MENUS **/
 
-#main-menu {
-    width: 50%;
-    min-width: 750px;
-    margin: 0 0 0 -26px;
-}
 .main-menu {
     font-size: .9em;
 }
+
 .main-menu a {
     color: #0066ff;
 }
